--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
             <p class="mensagem">
                 Seja Bem-vindo!
             </p>
-    
+            
+            <div>Projeto feito por <a href="https://github.com/JGA7077" target="_blank">João Gabriel</a></div>
             <div>Icons made by <a href="https://www.freepik.com" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>
 
         </div>
